Troubleshooting Layout Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,6 @@ a {
   &.list--tick {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
-    color: var(--color-headings);
 
     & .list__item {
       padding-left: 0.5rem;
@@ -237,7 +236,7 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   text-transform: uppercase;
-  padding: 2rem 3rem;
+  padding: 2rem 4vh;
   border: 0;
   border-radius: 40px;
   cursor: pointer;
@@ -340,6 +339,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
   }
 
   & .btn {
@@ -778,10 +778,11 @@ a {
 /* Domain */
 
 .domain {
+  color: var(--color-headings);
+
   & .domain__prices {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     font-size: 2rem;
     font-weight: 600;
